# Abstractive-Text-Summarization-using-Transformers

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCKER_DEPLOY.md  Dockerfile  LICENSE  MODEL_DEPLOYMENT.md  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_IMPROVEMENTS.md  README.md  START_HERE.md  app.py  docker-compose.yml  model.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.py  setup.sh  upload_auto.py  upload_model.py  upload_model_to_hub.py
.github/workflows/: ci.yml
.streamlit/: config.toml
Notebook/: Text_summarization_bart.ipynb
notebook/: Text_Summarization.ipynb
src/: __init__.py  config.py  model.py  model_setup.py  utils.py
tests/: __init__.py  test_model.py
